[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z3ext"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Chris Greene", email = "archgoon@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/z3ext#readme"
Issues = "https://github.com/unknown/z3ext/issues"
Source = "https://github.com/unknown/z3ext"

[tool.hatch.version]
path = "src/z3ext/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "z3-solver"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/z3ext tests}"

[tool.coverage.run]
source_pkgs = ["z3ext", "tests"]
branch = true
parallel = true
omit = [
  "src/z3ext/__about__.py",
]

[tool.coverage.paths]
z3ext = ["src/z3ext", "*/z3ext/src/z3ext"]
tests = ["tests", "*/z3ext/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
